force-app/main/default/objects/Exam__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00O2w000008fcmsEAA/view?fv0=&quot;&amp; Id , &quot;Exam Questions&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report</label>
    <type>Text</type>
</CustomField>