force-app/main/default/objects/Exam__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>( Number_of_Questions__c  - Total_Errors__c)/ Number_of_Questions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>