force-app/main/default/objects/Exam__c/fields/Result_without_mistakes__c.field-meta.xml
<CustomField>
    <fullName>Result_without_mistakes__c</fullName>
    <formula>( Number_of_Questions__c -(Total_Errors__c - Total_Mistakes__c))/ Number_of_Questions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result without mistakes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>