force-app/main/default/objects/Exam__c/fields/Total_Errors__c.field-meta.xml
<CustomField>
    <fullName>Total_Errors__c</fullName>
    <label>Total Errors</label>
    <summaryForeignKey>Question__c.Exam__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>