force-app/main/default/objects/Exam__c/fields/Total_Mistakes__c.field-meta.xml
<CustomField>
    <fullName>Total_Mistakes__c</fullName>
    <label>Total Mistakes</label>
    <summaryFilterItems>
        <field>Question__c.Mistake__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Question__c.Exam__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>