force-app/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Questions__c</columns>
    <columns>Result__c</columns>
    <columns>Report__c</columns>
    <columns>Result_without_mistakes__c</columns>
    <columns>Total_Errors__c</columns>
    <columns>Total_Mistakes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>